# REvoDesign

./: .coveragerc  .coveragerc-server  .deepsource.toml  .gitignore  .mcp.json  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  MANIFEST.in  MEMORY.md  Makefile  README.REvoDesign.md  README.md  REvoDesign.PyMOL.py  REvoDesign_PyMOL.py  SECURITY.md  TestREvoDesign_PyMOL.py  codecov.yml  coverage.xml  mkdocs.yml  pyproject.toml  test_REvoDesign.sh  update_REvoDesign_from_repo.bat  update_REvoDesign_from_repo.sh
.circleci/: config.yml
.circleci/inactive/: config.yml
.claude/: CLAUDE.md  settings.json
.claude/agents/: verifier.md
.claude/commands/: spec.md  verify.md
.claude/hooks/: hooks.json  session-start
.github/inactive/: docker-image-test.yml  unit_tests_dev.yml
.github/workflows/: badge-test.yml  docker-image-test.yml  docker-image.yml  docs.yml  fuck-u-code.yml  lint_badge.yml  publish-pypi.yml  schedule-update-actions.yml  semantic-pr-check.yml  server-test.yml  shitty-code.yml  unit_tests.yml  unit_tests_dev.yml  unit_tests_tag.yml
.lingma/rules/: lan.md
.qlty/: qlty.toml
REvoDesign/: REvoDesign.py  __init__.py  __version__.py
REvoDesign/UI/: REvoDesign-CommentMutant.ui  REvoDesign-PyMOL-entry.ui  REvoDesign-PyMOL.ui  REvoDesign.ui  Ui_REvoDesign-PyMOL-entry.py  Ui_REvoDesign.py  liguist.pro
REvoDesign/application/: ui_driver.py
REvoDesign/basic/: __init__.py
REvoDesign/boot/: __init__.py  post_installed.py
REvoDesign/citations/: CitationManager.py  __init__.py
REvoDesign/clients/: InterProScaner.py  PSSM_GREMLIN_client.py  PythiaBiolibClient.py  QtSocketConnector.py  SocketConnector.py
REvoDesign/clusters/: ClusterRunner.py  __init__.py  cluster_sequence.py  combine_positions.py
REvoDesign/common/: FileExtentions.py  MultiMutantDesigner.py  Mutant.py  MutantTree.py  MutantVisualizer.py  ProfileParsers.py  RunnerConfig.py  file_extensions.py  magic_numbers.py
REvoDesign/config/: README.md  global_config.yaml
REvoDesign/evaluate/: Evaluator.py  __init__.py
REvoDesign/external_designer/: ExternalDesigners.py  __init__.py
REvoDesign/issues/: __init__.py  exceptions.py  warnings.py
REvoDesign/logger/: logger.py
REvoDesign/phylogenetics/: EvoMutator.py  GREMLIN_Tools.py  PSSM_GREMLIN_client.py  PSSM_profile.py  REvoDesigner.py  __init__.py  pymol_pssm_script.py
REvoDesign/retired/: extract_mutation_info.awk
REvoDesign/shortcuts/: __init__.py
REvoDesign/sidechain_solver/: Buildin.py  DLPacker.py  DunbrackRotamerLib.py  PIPPack.py  PIPpack.py  SidechainSolver.py  __init__.py
REvoDesign/structure/: ColabDesigner.py  PocketSearcher.py  SurfaceFinder.py  __init__.py
REvoDesign/tests/: QtTestWorker.py  TestData.py  __init__.py
REvoDesign/tools/: SessionMerger.py  client_tools.py  customized_widgets.py  logger.py  merge_sessions.py  mutant_tools.py  post_installed.py  pymol_utils.py  system_tools.py  utils.py
dev/: FUTURE.md  README.md  TODO.md  environment.yml  requirements.txt
dev/tools/: check_changelog_duplicates.py  check_multiline_fstring.sh  check_qt_binding_imports.py  compile_qt_ui.py  fix_tab_layouts.py  generate_ui_typing.py  reject_generated_main_ui.py  remove_layout_wrappers.py  restore_original_layouts.py  run.sh  transform_ui_layouts.py  (+2 more)
docs/: README-API.md  cluster_methods_guide.md  getting-started.md  index.md  openkinetics.md  plan.md
json_multi_input/: 6182270032.json
jsons/: REvoDesignDeptsTable.json  REvoDesignExtrasTable.json  REvoDesignExtrasTableRich.json
notebooks/: validate_gremlin_pytorch.ipynb
package-manager/: README.md  REvoDesign-PyMOL-entry.ui  REvoDesign_PyMOL.py
playground/: plotly_qt.py
prompt/: docs.md  prompt.md  prompt.txt  unittest.md  universal.md
server/: .env  .env.example  .env.test  README.legacy.md  README.md  REvoDesign_PSSM_GREMLIN.sh  docker-compose.yml  pyproject.toml
server/.github/workflows/: main.yml
server/docker/: Dockerfile  requirements.txt  run_docker.py
server/docker/runner/: Dockerfile
server/docker/server/: Dockerfile  requirements.txt
server/env/: GREMLIN.yml  REvoDesign.yml
server/nginx_sites/: README.md  REvoDesign_PSSM_GREMLIN.app
server/pssm_gremlin/: auth.py  db.py  pssm_gremlin.py  routes.py  schemas.py  users.template.txt
server/pssm_gremlin/airflow_dags/: pssm_gremlin.py
server/pssm_gremlin/static/css/: auth-page.css  base.css  create-task.css  dashboard.css  user-control.css
server/pssm_gremlin/static/js/: auth-api.js  create-task.js  dashboard.js  error-page.js  login.js  profile.js  register.js  user-control.js
server/pssm_gremlin/templates/: create_task.html  error.html  login.html  profile.html  pssm_gremlin_dashboard.html  register.html  user_control.html  verify-email.html
server/pssm_gremlin_server/: __init__.py  auth.py  db.py  pssm_gremlin.py  ratelimit.py  routes.py  schemas.py
server/pssm_gremlin_server/static/css/: auth-page.css  base.css  create-task.css  dashboard.css  error-page.css  profile.css  user-control.css
server/pssm_gremlin_server/static/js/: auth-api.js  create-task.js  dashboard.js  login.js  profile.js  register.js  theme.js  user-control.js
server/pssm_gremlin_server/templates/: create_task.html  error.html  profile.html  register.html  reset-password.html  terms.html  user_control.html  verify-email.html
server/pssm_gremlin_server/templates/email/: base.html
server/run/: hot_fix.sh  restart_pssm_flask.sh  setup_pssm_flask.sh
server/scripts/: GREMLIN_TFv1.py  fasta_lower_char_rm.py  make_paired_MSA_simple.py
server/tests/: conftest.py  test_admin.py  test_auth.py  test_config.py  test_docker.py  test_race_conditions.py  test_runner_script_static.py  test_security.py  test_security_advanced.py  test_server.py  test_tasks.py
tests/: PyMOLTests.pml  QtTests.py  TestData.py  UnitTests.py  conftest.py  launch_REvoDesign.pymol.pml  test_config_isolation.py  test_driver.py  test_revodesign_workdir.py  test_thread_ui_bridge.py  test_version.py
tools/: ci-runner.admin.sh  copyright.js  license_notice.py  release_tag.sh  translate.sh
(+535 files in other folders)
