[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "REvoDesign"
version = "1.3.1"
description = "A PyMOL plugin that makes enzyme redesign tasks easier to all."
authors = ["Yinying Yao <yaoyy.hi@gmail.com>"]

readme = "README.md"
license = "GNU"
repository = "https://github.com/YaoYinYing/REvoDesign"
classifiers = [
    "Topic :: Scientific/Engineering :: Biochemistry",
    "Topic :: Scientific/Engineering :: Protein Engineering"
]

packages = [
    { include = "REvoDesign" },
    { include = "REvoDesign/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.7"
absl-py = ">=1.4.0"
biopython = ">=1.81"
joblib = ">=1.3.2"

matplotlib = [
    {version = "<=3.5.3", python = ">=3.6,<3.9"},
    {version = "^3.6.0", python = ">=3.9"}
]

pandas = [
    {version = ">=1.3.5", python = ">=3.6,<3.9"},
    {version = ">=2.1.0", python = ">=3.9"}
]
requests = ">=2.31.0"


scikit-learn = [
    {version = "1.0.*", python = ">=3.6,<3.9"},
    {version = ">=1.3.0", python = ">=3.9"}
]

scipy = [
    {version = "<=1.7.3", python = ">=3.6,<3.9"},
    {version = "^1.11.2", python = ">=3.9"}
]
pyOpenSSL = "^23.3.0" 

pybiolib = '1.1.1666'

colabdesign= { git = "https://github.com/sokrypton/ColabDesign.git", tag = "v1.1.1" , optional = true }

DLPacker = {git = "https://github.com/YaoYinYing/DLPacker", branch = 'pip-installable', optional = true}

[tool.poetry.extras]
colabdesign = ["colabdesign"]

dlpacker = ["DLPacker"]

[tool.black]
line-length = 79
target-version = ['py38']
skip-string-normalization = true

include = '''
/(
  | REvoDesign
)/
'''

exclude = "REvoDesign/UI"