[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "REvoDesign"
version = "1.3.3"
description = "A PyMOL plugin that makes enzyme redesign tasks easier to all."
authors = ["Yinying Yao <yaoyy.hi@gmail.com>"]

readme = "README.md"
license = "GNU"
repository = "https://github.com/YaoYinYing/REvoDesign"
classifiers = [
    "Topic :: Scientific/Engineering :: Biochemistry",
    "Topic :: Scientific/Engineering :: Protein Engineering"
]

packages = [
    { include = "REvoDesign" },
    { include = "REvoDesign/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.7"
biopython = ">=1.81"
joblib = ">=1.3.2"

matplotlib = [
    {version = "<=3.5.3", python = ">=3.6,<3.9"},
    {version = "^3.6.0", python = ">=3.9"}
]

pandas = [
    {version = ">=1.3.5", python = ">=3.6,<3.9"},
    {version = ">=2.1.0", python = ">=3.9"}
]
requests = ">=2.31.0"


scikit-learn = [
    {version = "1.0.*", python = ">=3.6,<3.9"},
    {version = ">=1.3.0", python = ">=3.9"}
]

scipy = [
    {version = "<=1.7.3", python = ">=3.6,<3.9"},
    {version = "^1.11.2", python = ">=3.9"}
]
pyOpenSSL = "^23.3.0" 

pybiolib = '1.1.1666'

hydra-core= "^1.3.2"
omegaconf = "^2.3.0"

rdkit = "*"

# optional packages
## designers
colabdesign= { git = "https://github.com/sokrypton/ColabDesign.git", tag = "v1.1.1" , optional = true }

#PRIME = {git = "https://github.com/YaoYinYing/Prime_1", optional = true}
#UniKP = {git = "https://github.com/YaoYinYing/unikp.git", optional = true}

## sidechain solver
DLPacker = {git = "https://github.com/YaoYinYing/DLPacker", branch = 'pip-installable', optional = true}
PIPpack = {git = "https://github.com/YaoYinYing/PIPPack", branch = 'pip-installable', optional = true}

# unit tests
absl-py = { version = ">=1.4.0", optional= true}

[tool.poetry.extras]
jax = ["colabdesign"]
torch = ["PIPpack"]
tf = ["DLPacker"]

unittest = [ "absl-py" ]

full = ["colabdesign", "DLPacker", "PIPpack"]

[tool.black]
line-length = 79
target-version = ['py38']
skip-string-normalization = true

include = '''
/(
  | REvoDesign
)/
'''

exclude = "REvoDesign/UI"