[build-system]
requires = ["poetry-core>=1.0.0,<2.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "REvoDesign"
version = "1.5.0-beta"
description = "A PyMOL plugin that makes enzyme redesign tasks easier to all."
authors = ["Yinying Yao <yaoyy.hi@gmail.com>"]

readme = "README.md"
license = "GNU"
repository = "https://github.com/YaoYinYing/REvoDesign"
classifiers = [
    "Topic :: Scientific/Engineering :: Biochemistry",
    "Topic :: Scientific/Engineering :: Protein Engineering"
]

packages = [
    { include = "REvoDesign" },
    { include = "REvoDesign/**/*.py" },
]

[tool.poetry.dependencies]
python = ">=3.9"

typing-extensions  = ">=4.9.0"
immutabledict = "^4.1.0"
biopython = "^1.81"
joblib = "^1.3.2"
matplotlib =  "^3.6.0"
pandas =  ">=2.1.0" 
requests = "^2.31.0"
scikit-learn =  ">=1.3.0"
scipy =  "^1.11.2" 
pyOpenSSL = "^23.3.0" 
pybiolib = '1.1.1666'
hydra-core= "^1.3.2"
omegaconf = "^2.3.0"
rdkit = ">=2023.9.4" 
attrs = "*"
# optional packages
## designers
colabdesign= { git = "https://github.com/sokrypton/ColabDesign.git", tag = "v1.1.1" , optional = true }

#PRIME = {git = "https://github.com/YaoYinYing/Prime_1", optional = true}
#UniKP = {git = "https://github.com/YaoYinYing/unikp.git", optional = true}

## sidechain solver
DLPacker = {git = "https://github.com/YaoYinYing/DLPacker", branch = 'pip-installable-cpu', optional = true}
PIPPack = {git = "https://github.com/YaoYinYing/PIPPack", branch = 'pip-installable-cpu', optional = true}

# unit tests
absl-py = { version = ">=1.4.0", optional= true}
pooch = {version = "^1.8.0", optional =true}
pytest-qt = {version = "^4.4.0", optional = true}

[tool.poetry.extras]
jax = ["colabdesign"]
torch = ["PIPPack"]
tf = ["DLPacker"]

unittest = [ "absl-py", "pooch", "pytest-qt"]

full = ["colabdesign", "DLPacker", "PIPPack"]

[tool.black]
line-length = 79
target-version = ['py38']
skip-string-normalization = true

include = '''
/(
  | REvoDesign
)/
'''

exclude = "REvoDesign/UI"